Multiple fixes on composer highlighting
- Hide scrollbar for the faux highlight div
- Use unicode-aware split for highlighting exceeded characters
- Disable highlight of mentions, hashtags, etc if exceeded max characters
- Sync scroll as often as possible

--- a/src/components/compose.css
+++ b/src/components/compose.css
@@ -653,6 +653,11 @@
     white-space: pre-wrap;
     min-height: 5em;
     max-height: 50vh;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     /* Follow textarea styles */
     @media (min-width: 40em) {
